<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_viewType"
        android:icon="@drawable/ic_list_teal_24dp"
        android:title="@string/mi_view_title"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/mi_listDropdown"
                android:icon="@drawable/ic_list_24dp"
                android:onClick="displayList"
                android:title="@string/mi_list_title"/>

            <item
                android:id="@+id/mi_gridDropdown"
                android:icon="@drawable/ic_grid_24dp"
                android:onClick="displayGrid"
                android:title="@string/mi_grid_title"/>

        </menu>

    </item>

    <item
        android:id="@+id/mi_star"
        android:icon="@drawable/ic_rate_outline_teal_24dp"
        android:title="@string/mi_rate_title"
        android:visible="true"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/mi_ratingDropdown"
                android:icon="@drawable/ic_rate_outline_24dp"
                android:onClick="listByRatingListener"
                android:title="@string/mi_list_by_rating_title"/>

            <item
                android:id="@+id/mi_idNumberDropdown"
                android:icon="@drawable/ic_123_24dp"
                android:onClick="listByShowIdListener"
                android:title="@string/mi_list_by_id_number_title"/>

            <item
                android:id="@+id/mi_artistDropdown"
                android:icon="@drawable/ic_artist_24dp"
                android:onClick="listByArtistListener"
                android:title="@string/mi_artist_title"/>

            <item
                android:id="@+id/mi_deletedArtDropdown"
                android:icon="@drawable/ic_deleted_24dp"
                android:onClick="showDeletedArtwork"
                android:title="@string/mi_show_deleted_art_title"/>

            <item
                android:id="@+id/mi_takenArtDropdown"
                android:icon="@drawable/ic_taken_24dp"
                android:onClick="showTakenArtwork"
                android:title="@string/mi_show_taken_art_title"/>

        </menu>

    </item>

    <item
        android:id="@+id/mi_filter"
        android:icon="@drawable/ic_filter_teal_24dp"
        android:title="@string/mi_filter_title"
        android:visible="false"
        app:showAsAction="always">

<!--        <menu>-->

<!--            <item-->
<!--                android:id="@+id/mi_ratingDropdown"-->
<!--                android:icon="@drawable/ic_rate_outline_24dp"-->
<!--                android:onClick="listByRatingListener"-->
<!--                android:title="@string/mi_list_by_rating_title"/>-->

<!--            <item-->
<!--                android:id="@+id/mi_idNumberDropdown"-->
<!--                android:icon="@drawable/ic_123_24dp"-->
<!--                android:onClick="listByShowIdListener"-->
<!--                android:title="@string/mi_list_by_id_number_title"/>-->

<!--            <item-->
<!--                android:id="@+id/mi_artistDropdown"-->
<!--                android:icon="@drawable/ic_artist_24dp"-->
<!--                android:onClick="listByArtistListener"-->
<!--                android:title="@string/mi_artist_title"/>-->

<!--            <item-->
<!--                android:id="@+id/mi_deletedArtDropdown"-->
<!--                android:icon="@drawable/ic_deleted_24dp"-->
<!--                android:onClick="showDeletedArtwork"-->
<!--                android:title="@string/mi_show_deleted_art_title"/>-->

<!--            <item-->
<!--                android:id="@+id/mi_takenArtDropdown"-->
<!--                android:icon="@drawable/ic_taken_24dp"-->
<!--                android:onClick="showTakenArtwork"-->
<!--                android:title="@string/mi_show_taken_art_title"/>-->

<!--        </menu>-->

    </item>

    <item
        android:id="@+id/mi_refresh"
        android:icon="@drawable/ic_refresh_24dp"
        android:onClick="refreshRateFragment"
        android:title="@string/mi_refresh_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/mi_search"
        android:title="@string/mi_title_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

</menu>
