<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_overview">

    <fragment
        android:id="@+id/navigation_overview"
        android:name="com.joerock.artthief.ui.overview.OverviewFragment"
        android:label="@string/title_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/navigation_rate"
        android:name="com.joerock.artthief.ui.rate.RateFragment"
        android:label="@string/title_rate"
        tools:layout="@layout/fragment_rate">

        <action
            android:id="@+id/action_rateToArtwork"
            app:destination="@+id/navigation_artwork"/>

        <action
            android:id="@+id/action_rateToCompare"
            app:destination="@+id/navigation_compare"/>

    </fragment>

    <!--Artwork fragment: NOT part of app bar configuration-->
    <fragment
        android:id="@+id/navigation_artwork"
        android:name="com.joerock.artthief.ui.rate.ArtworkFragment"
        android:label="@string/title_artwork"
        tools:layout="@layout/fragment_artwork">

        <action
            android:id="@+id/action_artworkToRate"
            app:destination="@+id/navigation_rate"/>

    </fragment>

    <!--Compare fragment: NOT part of app bar configuration-->
    <fragment
        android:id="@+id/navigation_compare"
        android:name="com.joerock.artthief.ui.rate.CompareFragment"
        android:label="@string/title_compare"
        tools:layout="@layout/fragment_compare">

        <action
            android:id="@+id/action_compareToRate"
            app:destination="@+id/navigation_rate"/>

        <action
            android:id="@+id/action_compareToCompareSettings"
            app:destination="@+id/navigation_compareSettings"/>

    </fragment>

    <!--Compare settings fragment: NOT part of app bar configuration-->
    <fragment
        android:id="@+id/navigation_compareSettings"
        android:name="com.joerock.artthief.ui.rate.CompareSettingsFragment"
        android:label="@string/compare_art_settings_title"
        tools:layout="@layout/fragment_compare_settings">

        <action
            android:id="@+id/action_compareSettingsToCompare"
            app:destination="@+id/navigation_compare"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_augmented"
        android:name="com.joerock.artthief.ui.augmented.AugmentedFragment"
        android:label="@string/title_augmented"
        tools:layout="@layout/fragment_augmented" />

    <fragment
        android:id="@+id/navigation_send"
        android:name="com.joerock.artthief.ui.send.SendFragment"
        android:label="@string/title_send"
        tools:layout="@layout/fragment_send" />
</navigation>
