<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.augmented.AugmentedFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:elevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title_send"
            app:menu="@menu/send_menu"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_top"
        android:layout_margin="20dp"
        android:text="@string/send_fragment_directions"
        android:textAlignment="center"/>

    <RelativeLayout
        android:id="@+id/rl_input_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_directions"
        android:layout_marginHorizontal="20dp"
        android:padding="40dp"
        android:background="@drawable/launch_button_outline">

        <TextView
            android:id="@+id/tv_input_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:text="@string/send_fragment_input_header"/>

        <EditText
            android:id="@+id/et_input_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_input_header"
            android:layout_centerHorizontal="true"
            android:hint="@string/send_fragment_input_hint"
            android:inputType="text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/et_input_text"
            android:layout_centerHorizontal="true"
            android:background="@drawable/launch_button_background"
            android:text="@string/send_fragment_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_input_box"
        android:layout_margin="20dp"
        android:text="@string/send_fragment_disclaimer"
        android:textAlignment="center"/>

</RelativeLayout>
