<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--Toolbar-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_compareSettingsTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/compareFragmentAppBar"
            android:elevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back_24dp"
            app:title="@string/compare_art_settings_title"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginVertical="15dp"
        android:text="@string/compare_settings_message"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/artwork_adapter_bottom_border"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/compare_settings_id_number_toggle" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_idNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/artwork_adapter_bottom_border"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/compare_settings_title_toggle" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/artwork_adapter_bottom_border"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/compare_settings_artist_toggle" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/artwork_adapter_bottom_border"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/compare_settings_media_toggle" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/artwork_adapter_bottom_border"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/compare_settings_dimensions_toggle" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_sizeInInches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/artwork_adapter_bottom_border"/>

</LinearLayout>
