<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.augmented.AugmentedFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/art_thief_primary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_augmented"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <!--Bottom border for toolbar-->
    <View
        android:id="@+id/toolbar_bottom_border"
        android:background="@color/toolbar_bottom_border"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/toolbar_top"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_bottom_border"
        android:layout_centerInParent="true"
        android:src="@drawable/vis_wall3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@id/toolbar_bottom_border"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_augmented_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/augmented_visualize_header"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_augmented_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/augmented_visualize_text"
                android:textAlignment="center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/augmented_visualize_button_text"/>

        </LinearLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/my_image"/>

    </LinearLayout>

</RelativeLayout>
